2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-07  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=130623
	* capplet-util.c (capplet_set_icon) : respect the icon theme

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	* gconf-property-editor.c (peditor_image_clicked_cb) : Use the monitor
	  size kludge for the vertical size of the new file selector.

2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* gconf-property-editor.c: (peditor_image_set_filename),
	(peditor_image_chooser_response_cb),
	(peditor_image_chooser_update_preview_cb),
	(peditor_image_clicked_cb): replace
	PreviewFileSelection (GtkFileSelection) with GtkFileChooser, use new
	gdk_pixbuf_new_from_file_at_size method to load a scaled image.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

Thu Aug  7 15:23:08 2003  Jonathan Blandford  <jrb@redhat.com>

	* gconf-property-editor.c (gconf_property_editor_set_prop): damn
	it Jonathan.  Save the @#*&$@# file before committing.

Mon Aug  4 14:35:22 2003  Jonathan Blandford  <jrb@redhat.com>

	* gconf-property-editor.c (gconf_property_editor_init): Reset the
	old connection when setting a new one, #116232

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-property-editor.c: (gconf_property_editor_finalize):
	Merge Anders' fix from stable.
