@@ -1,3 +1,9 @@
+2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-theme-info.c: (top_theme_dir_changed),
+	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor):
+	Merge fix for bug #149236.
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
